@@ -23,5 +23,4 @@
 #EXTINF:12,Free Music Charts - Platz 10
 ../audio/Platz 10.mp3
 #EXTINF:12,Free Music Charts - Plätz 11
-../audio/Plätz 10.mp3
-
+../audio/PlätzΆντ覚 10.mp3
